; ModuleID = '/home/carl/AnghaBench/netdata/collectors/apps.plugin/extr_apps_plugin.c_arl_callback_status_rssfile.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/apps.plugin/extr_apps_plugin.c_arl_callback_status_rssfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arl_callback_ptr = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arl_callback_status_rssfile(i8* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.arl_callback_ptr*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.arl_callback_ptr*
  store %struct.arl_callback_ptr* %14, %struct.arl_callback_ptr** %9, align 8
  %15 = load %struct.arl_callback_ptr*, %struct.arl_callback_ptr** %9, align 8
  %16 = getelementptr inbounds %struct.arl_callback_ptr, %struct.arl_callback_ptr* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.arl_callback_ptr*, %struct.arl_callback_ptr** %9, align 8
  %19 = getelementptr inbounds %struct.arl_callback_ptr, %struct.arl_callback_ptr* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @procfile_linewords(i32 %17, i32 %20)
  %22 = icmp slt i32 %21, 3
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %4
  br label %40

27:                                               ; preds = %4
  %28 = load %struct.arl_callback_ptr*, %struct.arl_callback_ptr** %9, align 8
  %29 = getelementptr inbounds %struct.arl_callback_ptr, %struct.arl_callback_ptr* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.arl_callback_ptr*, %struct.arl_callback_ptr** %9, align 8
  %32 = getelementptr inbounds %struct.arl_callback_ptr, %struct.arl_callback_ptr* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @procfile_lineword(i32 %30, i32 %33, i32 1)
  %35 = call i32 @str2kernel_uint_t(i32 %34)
  %36 = load %struct.arl_callback_ptr*, %struct.arl_callback_ptr** %9, align 8
  %37 = getelementptr inbounds %struct.arl_callback_ptr, %struct.arl_callback_ptr* %36, i32 0, i32 2
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  store i32 %35, i32* %39, align 4
  br label %40

40:                                               ; preds = %27, %26
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @procfile_linewords(i32, i32) #1

declare dso_local i32 @str2kernel_uint_t(i32) #1

declare dso_local i32 @procfile_lineword(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
